<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:padding="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:id="@+id/footer_layout_registration_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/logo_padding"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/first_name_edit_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_first_name"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/icon_first_name"
            android:drawablePadding="@dimen/padding"
            />
        <EditText
            android:id="@+id/last_name_edit_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_last_name"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/icon_first_name"
            android:drawablePadding="@dimen/padding"
            />


        <Spinner
            android:id="@+id/stream_spinner_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@android:color/white"
            />

        <Button
            android:id="@+id/submit_button_registration_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:background="@color/orangeBackground"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo_image_registration_fragment"
        android:layout_width="@dimen/logo_size_mini"
        android:layout_height="@dimen/logo_size_mini"
        android:src="@drawable/logo_app"
        android:padding="@dimen/logo_padding_mini"
        android:layout_above="@id/footer_layout_registration_fragment"
        android:layout_centerHorizontal="true"
        />

    <include layout="@layout/layout_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@id/logo_image_registration_fragment"
        />

</RelativeLayout>